--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "@fortawesome/vue-fontawesome": "^3.0.0-5",
         "@vee-validate/i18n": "^4.5.6",
         "@vee-validate/rules": "^4.5.6",
+        "laravel-permission-to-vuejs": "^3.0.0",
+        "moment": "^2.29.1",
         "sweetalert2": "^11.3.3",
         "vee-validate": "^4.5.6",
         "vue-carousel": "^0.18.0",
