--- a/package.json
+++ b/package.json
@@ -29,18 +29,23 @@
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^33.0.0",
         "@ckeditor/ckeditor5-vue": "^3.0.0",
+        "@fancyapps/ui": "^4.0.27",
         "@fortawesome/fontawesome-svg-core": "^1.2.36",
         "@fortawesome/free-brands-svg-icons": "^5.15.4",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/vue-fontawesome": "^3.0.0-5",
         "@vee-validate/i18n": "^4.5.6",
         "@vee-validate/rules": "^4.5.6",
+        "artplayer": "^4.4.7",
         "laravel-permission-to-vuejs": "^3.0.0",
         "moment": "^2.29.1",
         "sweetalert2": "^11.3.3",
         "vee-validate": "^4.5.6",
         "vue-accessible-color-picker": "^4.0.0",
         "vue-carousel": "^0.18.0",
+        "vue-cool-lightbox": "^2.7.5",
+        "vue-fancybox": "^1.0.3",
+        "vue-silentbox": "^2.4.5",
         "vue-video-player": "^5.0.2",
         "vue3-carousel": "^0.1.34",
         "vue3-player-video": "^1.2.5"
